--- a/angular/online learning system/src/app/components/cart/cart.component.css
+++ b/angular/online learning system/src/app/components/cart/cart.component.css
@@ -2,9 +2,23 @@
   margin: 100px;
   width: 100%;
   display: flex;
-  gap: 25px;
   flex-direction: column;
   height: 100%;
+}
+
+.empty-cart {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.subheading {
+  margin-top: 30px;
+  font-size: 35px;
 }
 
 /* .container {
