--- a/angular/online learning system/src/app/components/login/login.component.css
+++ b/angular/online learning system/src/app/components/login/login.component.css
@@ -25,7 +25,7 @@ label {
 }
 
 .btn {
-  background-color: rgba(255, 214, 10, 0.882);
+  background-color: #ffd60ae1;
   padding: 10px;
   width: 100%;
   margin-top: 5px;
