--- a/angular/online learning system/src/app/components/my-learning/my-learning.component.css
+++ b/angular/online learning system/src/app/components/my-learning/my-learning.component.css
@@ -7,16 +7,14 @@
   margin: 100px;
   width: 100%;
   display: flex;
-  gap: 25px;
   flex-direction: column;
   height: 100%;
 }
 
-hr {
-}
 .courses {
   display: flex;
   gap: 30px;
+  margin-top: 30px;
   flex-direction: row;
   flex-wrap: wrap;
 }
