--- a/angular/online learning system/src/app/components/my-learning/my-learning.component.html
+++ b/angular/online learning system/src/app/components/my-learning/my-learning.component.html
@@ -7,6 +7,7 @@
       *ngFor="let courseEl of courses; let i = index"
       [course]="courseEl"
       [index]="i"
+      [price]="false"
     ></app-course>
   </div>
 </div>
