minor bug fixes

--- a/angular/online learning system/src/app/components/admin/admin-mentor/admin-mentor.component.html
+++ b/angular/online learning system/src/app/components/admin/admin-mentor/admin-mentor.component.html
@@ -1,4 +1,12 @@
 <div class="container">
+  <div class="add-mentor">
+    <h1>Add a new mentor</h1>
+    <hr />
+    <div class="add-new-mentor">
+      <input type="text" placeholder="Enter mentor name" name="name" ngModel />
+      <button class="add-mentor-btn">Add Mentor</button>
+    </div>
+  </div>
   <h2>Mentor Details</h2>
   <hr />
   <table class="table">
