--- a/angular/online learning system/src/app/components/courses/course/course.component.html
+++ b/angular/online learning system/src/app/components/courses/course/course.component.html
@@ -4,11 +4,10 @@
       class="card-img-top"
       src="../../../assets/courses/onlinecourse2.webp"
       alt="Card image cap"
-      height="250px"
+      height="200px"
     />
     <div class="card-body">
-      <h4 class="card-title">{{ course.name }}</h4>
-      <p class="card-text" *ngIf="price">₹ {{ course.price }}</p>
+      <h2 class="card-title">{{ course.name }}</h2>
       <div class="stars">
         <i
           class="fa fa-star"
@@ -16,12 +15,15 @@
           [ngClass]="{ filled: course.rating >= i + 1 }"
         ></i>
       </div>
+      <p class="card-price" *ngIf="price">₹ {{ course.price }}</p>
+
       <div class="purchase-options" *ngIf="isOnCoursePage()">
         <button class="add-to-cart" (click)="addTocart(course)">
           Add to Cart
         </button>
         <button class="buy-now">Buy now</button>
       </div>
+
       <div class="approval-options" *ngIf="isOnAdminPage()">
         <button class="approve" (click)="approveCourse(course)">Approve</button>
         <button class="reject">Reject</button>
