--- a/angular/online learning system/src/app/components/header/header.component.css
+++ b/angular/online learning system/src/app/components/header/header.component.css
@@ -1,8 +1,8 @@
 .page-header {
   display: flex;
-  height: 64px;
+  height: 84px;
+  align-items: center;
   justify-content: space-between;
-  align-items: space-around;
   padding: 15px 50px;
   background-color: #161d29;
   border-bottom: 1px solid #2c333f;
@@ -26,11 +26,11 @@ button:hover {
   font-size: 20px;
 }
 
-.page-header-login-logout > a {
+/* .page-header-login-logout > a {
   display: flex;
-  justify-items: space-between;
-  align-items: center;
-}
+  justify-items: flex-end;
+  align-items: end;
+} */
 
 .login-btn {
   text-decoration: none;
@@ -54,6 +54,23 @@ button:hover {
   border: none;
   font-size: 20px;
   margin-right: 20px;
+  position: relative;
+}
+
+.cart-number {
+  position: absolute; /* Makes the number element absolutely positioned */
+  top: -10px; /* Positions the number above the cart icon slightly */
+  right: 30px;
+  /* Positions the number to the right of the cart icon slightly */
+  color: rgba(1, 9, 20, 255);
+  border-radius: 8px;
+  text-align: center;
+  height: 18px;
+  width: 18px;
+  line-height: 16px;
+  background-color: #ffd60ae1;
+  margin: 0px; /* Adds padding to the number element */
+  font-size: 12px; /* Sets the font size of the number */
 }
 
 .profile-logo {
