--- a/angular/online learning system/src/app/components/mentor/mentor.component.html
+++ b/angular/online learning system/src/app/components/mentor/mentor.component.html
@@ -1,108 +1,98 @@
 <div class="container">
-  <h1>Add a new course</h1>
-  <hr />
-  <div class="add-new-course">
-    <div class="course-form">
-      <form #courseForm="ngForm">
-        <h2>Course Details</h2>
-        <div>
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input
-              class="form-style"
-              type="text"
-              placeholder="Enter course name"
-              id="name"
-              name="name"
-              ngModel
-            />
+  <div class="add-course">
+    <h1>Add a new course</h1>
+    <hr />
+    <div class="add-new-course">
+      <div class="course-form">
+        <form #courseForm="ngForm" (ngSubmit)="onSubmit()">
+          <h2>Course Details</h2>
+          <div>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input
+                class="form-style"
+                type="text"
+                placeholder="Enter course name"
+                id="name"
+                name="name"
+                ngModel
+              />
+            </div>
+
+            <div>
+              <label for="price">Price</label>
+              <input
+                type="text"
+                placeholder="Enter price of course"
+                id="price"
+                class="form-style"
+                name="price"
+                ngModel
+              />
+            </div>
+            <div>
+              <label for="duration">Duration</label>
+              <input
+                type="text"
+                placeholder="Enter duration of course"
+                id="duration"
+                class="form-style"
+                name="duration"
+                ngModel
+              />
+            </div>
+
+            <div>
+              <label for="video">Video Link</label>
+              <input
+                type="text"
+                placeholder="Enter video link"
+                id="video"
+                class="form-style"
+                name="video"
+                ngModel
+              />
+            </div>
           </div>
+
+          <h2>FAQ Details</h2>
 
           <div>
-            <label for="price">Price</label>
-            <input
-              type="text"
-              placeholder="Enter price of course"
-              id="price"
-              class="form-style"
-              name="price"
-              ngModel
-            />
+            <div class="form-group">
+              <label for="faq">FAQ </label>
+              <input
+                class="form-style"
+                type="text"
+                placeholder="Enter faq"
+                id="faq"
+                name="faq"
+                ngModel
+              />
+            </div>
+            <div class="form-group">
+              <label for="faq-answer">Answer </label>
+              <input
+                class="form-style"
+                type="text"
+                placeholder="Enter answer "
+                id="faq-answer"
+                name="faq-answer"
+                ngModel
+              />
+            </div>
           </div>
-          <div>
-            <label for="duration">Duration</label>
-            <input
-              type="text"
-              placeholder="Enter duration of course"
-              id="duration"
-              class="form-style"
-              name="duration"
-              ngModel
-            />
-          </div>
+          <button class="btn">Add Course</button>
+        </form>
+      </div>
 
-          <div>
-            <label for="video">Video Link</label>
-            <input
-              type="text"
-              placeholder="Enter video link"
-              id="video"
-              class="form-style"
-              name="video"
-              ngModel
-            />
-          </div>
-
-          <div>
-            <label for="price">Price</label>
-            <input
-              type="text"
-              placeholder="Enter price of course"
-              id="price"
-              class="form-style"
-              name="price"
-              ngModel
-            />
-          </div>
-        </div>
-
-        <h2>FAQ Details</h2>
-
-        <div>
-          <div class="form-group">
-            <label for="faq">FAQ </label>
-            <input
-              class="form-style"
-              type="text"
-              placeholder="Enter faq"
-              id="faq"
-              name="faq"
-              ngModel
-            />
-          </div>
-          <div class="form-group">
-            <label for="faq-answer">Answer </label>
-            <input
-              class="form-style"
-              type="text"
-              placeholder="Enter answer "
-              id="faq-answer"
-              name="faq-answer"
-              ngModel
-            />
-          </div>
-        </div>
-        <button class="btn">Add Course</button>
-      </form>
-    </div>
-
-    <div class="course-image">
-      <img
-        src="../../../assets/courses/new-course.svg"
-        alt="couldn't preview image"
-        height="450px"
-        width="550px"
-      />
+      <div class="course-image">
+        <img
+          src="../../../assets/courses/new-course.svg"
+          alt="couldn't preview image"
+          height="450px"
+          width="550px"
+        />
+      </div>
     </div>
   </div>
 </div>
