--- a/angular/online learning system/src/app/components/admin/admin-courses/admin-courses.component.css
+++ b/angular/online learning system/src/app/components/admin/admin-courses/admin-courses.component.css
@@ -1,7 +1,6 @@
 .pending-courses {
   display: flex;
   flex-direction: column;
-  gap: 30px;
   margin-top: 30px;
   flex-wrap: wrap;
 }
@@ -14,6 +13,7 @@
   display: flex;
   flex-direction: row;
   gap: 30px;
+  margin-top: 30px;
 }
 
 .courses-container {
