--- a/angular/online learning system/src/app/components/admin/admin-mentor/admin-mentor.component.css
+++ b/angular/online learning system/src/app/components/admin/admin-mentor/admin-mentor.component.css
@@ -1,11 +1,54 @@
 .container {
-  margin-top: 10px;
+  margin-top: 30px;
   width: 100%;
+}
+
+.add-new-mentor {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  gap: 45px;
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+.add-mentor {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.add-mentor-btn {
+  background-color: #ffd60ae1;
+  padding: 10px;
+  width: 50%;
+  color: rgba(1, 9, 20, 255);
+  font-weight: bold;
+  border-radius: 5px;
+  border: none;
+}
+input[type="text"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  display: inline-block;
+  border: none;
+  color: #afb2be;
+  box-sizing: border-box;
+  background-color: #161d29;
+  border-radius: 5px;
+}
+
+h2 {
+  margin-bottom: 25px;
 }
 
 .table {
   background-color: #161d29;
-  margin-top: 35px;
+  margin-top: 50px;
   text-align: center;
   border: 1px solid #2c333f;
   border-radius: 10px;
