--- a/angular/online learning system/src/app/components/courses/course/course.component.css
+++ b/angular/online learning system/src/app/components/courses/course/course.component.css
@@ -1,25 +1,35 @@
 .card {
   background-color: #161d29;
   color: white;
-  /* height: 500px; */
-  box-shadow: 4px 4px 4px 4px #1b2733;
+  padding: 15px;
   width: 300px;
 }
+
+.card-img-top {
+  border-radius: 5px;
+}
+
+/* .card-title {
+  margin-top: 10px;
+} */
 
 .card:hover {
   transition: all 0.4s ease-in-out;
   box-shadow: 0px 4px 10px 10px #303f5b;
 }
 
-.card-text {
-  font-size: 30px;
+.card-price {
+  font-size: 28px;
   font-weight: 400;
 }
 
-.card-body {
-  margin-top: 15px;
-  margin-left: 10px;
+h2 {
+  margin: 0;
 }
+
+/* .card-body {
+  padding: 0;
+} */
 
 .buy-now,
 .reject {
@@ -42,27 +52,24 @@
   border-radius: 5px;
 }
 
-.course {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 80px;
-}
-
 .purchase-options,
 .approval-options {
   margin-top: 20px;
 }
 
-.stars {
-  display: inline-block;
-}
-
 .fa-star {
   color: #ddd;
-  font-size: 16px;
+  font-size: 12px;
   margin-right: 5px;
 }
 
 .fa-star.filled {
   color: #f1c40f;
 }
+
+/* .card-heading {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 15px;
+} */
