--- a/angular/online learning system/src/app/components/home/home.component.css
+++ b/angular/online learning system/src/app/components/home/home.component.css
@@ -44,10 +44,9 @@ hr {
 
 .courses-section,
 .feedback-section {
-  margin-left: 100px;
   display: flex;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
   flex-direction: column;
 }
 
@@ -59,14 +58,14 @@ hr {
 
 .courses-card {
   display: flex;
-  gap: 80px;
+  gap: 40px;
   flex-wrap: wrap;
 }
 
 .course-card {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 50px;
   margin-top: 50px;
 }
 
