--- a/angular/online learning system/src/app/components/my-learning/my-learning.component.css
+++ b/angular/online learning system/src/app/components/my-learning/my-learning.component.css
@@ -4,8 +4,9 @@
 }
 
 .container {
-  margin: 100px;
+  margin: 50px;
   width: 100%;
+  margin-left: 120px;
   display: flex;
   flex-direction: column;
   height: 100%;
