--- a/angular/online learning system/src/app/components/cart/cart.component.css
+++ b/angular/online learning system/src/app/components/cart/cart.component.css
@@ -7,6 +7,12 @@
   margin-left: 120px;
 }
 
+.cards-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .empty-cart {
   display: flex;
   align-items: center;
@@ -31,9 +37,19 @@
 .card {
   background-color: #161d29;
   color: white;
-  width: 60%;
   display: flex;
   flex-direction: row;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), transparent);
+}
+
+.card:hover {
+  transition: all 0.4s ease-in;
+  border: 1px solid #344150;
+
+  background-color: #1e242f;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), transparent);
+
+  box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.2);
 }
 
 .cards {
@@ -43,11 +59,13 @@
 }
 
 .card-img {
+  padding: 10px;
   width: 300px;
+  border-radius: 10px;
 }
 
 .card-text {
-  font-size: 30px;
+  font-size: 23px;
   font-weight: 400;
 }
 
@@ -77,4 +95,27 @@
 
 .fa-star.filled {
   color: #f1c40f;
+}
+
+.total-price {
+  margin-right: 150px;
+  height: 100%;
+  padding: 15px;
+  width: 300px;
+  background-color: #161d29;
+  box-shadow: 0 4px 8px 0 #1b232e;
+}
+
+.price-heading {
+  border-bottom: 1px solid #2c333f;
+  padding: 10px;
+}
+
+.course-price {
+  font-size: 22px;
+}
+
+.price-total {
+  border-top: 1px solid #2c333f;
+  padding: 10px;
 }
