--- a/angular/online learning system/src/app/components/cart/cart.component.html
+++ b/angular/online learning system/src/app/components/cart/cart.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <h1>Cart</h1>
   <hr />
+
   <div class="empty-cart">
     <div *ngIf="cart.length === 0">
       <img
@@ -13,33 +14,45 @@
       <button class="btn" routerLink="/courses">Explore Course</button>
     </div>
   </div>
-  <div class="cards">
-    <div class="card" *ngFor="let course of cart; let j = index">
-      <div class="card-img">
-        <img
-          class="card-img-top"
-          src="../../../assets/courses/onlinecourse2.webp"
-          alt="Card image cap"
-          height="250px"
-        />
-      </div>
-      <div class="card-body">
-        <h4 class="card-title">{{ course.name }}</h4>
-        <p class="card-text">₹ {{ course.price }}</p>
-        <div class="stars">
-          <i
-            class="fa fa-star"
-            *ngFor="let star of [1, 2, 3, 4, 5]; let i = index"
-            [ngClass]="{ filled: course.rating >= i + 1 }"
-          ></i>
+
+  <div class="cards-container" *ngIf="cart.length > 0">
+    <div class="cards">
+      <div class="card" *ngFor="let course of cart; let j = index">
+        <div class="card-img">
+          <img
+            class="card-img-top"
+            src="../../../assets/courses/onlinecourse2.webp"
+            alt="Card image cap"
+            height="250px"
+          />
         </div>
-        <div class="cart-button">
-          <button class="btn" (click)="onBuyNowClick(course)">Buy Now</button>
-          <button class="btn" (click)="onRemoveClick(course.name)">
-            Remove
-          </button>
+        <div class="card-body">
+          <h4 class="card-title">{{ course.name }}</h4>
+          <p class="card-text">₹ {{ course.price }}</p>
+          <div class="stars">
+            <i
+              class="fa fa-star"
+              *ngFor="let star of [1, 2, 3, 4, 5]; let i = index"
+              [ngClass]="{ filled: course.rating >= i + 1 }"
+            ></i>
+          </div>
+          <div class="cart-button">
+            <button class="btn" (click)="onBuyNowClick(course)">Buy Now</button>
+            <button class="btn" (click)="onRemoveClick(course.name)">
+              Remove
+            </button>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="total-price">
+      <h3 class="price-heading">Price Details</h3>
+      <ul class="course-price">
+        <li *ngFor="let course of cart">
+          {{ course.name }} - ₹ {{ course.price }}
+        </li>
+      </ul>
+      <h3 class="price-total">Subtotal: ₹ {{ calculateSubtotalPrice() }}</h3>
     </div>
   </div>
 
