--- a/angular/online learning system/src/app/components/courses/course/course.component.css
+++ b/angular/online learning system/src/app/components/courses/course/course.component.css
@@ -1,8 +1,11 @@
 .card {
   background-color: #161d29;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), transparent);
   color: white;
   padding: 15px;
+  height: 300px;
   width: 300px;
+  box-shadow: 0 4px 8px 0 #1b232e;
 }
 
 .card-img-top {
@@ -14,12 +17,20 @@
 } */
 
 .card:hover {
-  transition: all 0.4s ease-in-out;
-  box-shadow: 0px 4px 10px 10px #303f5b;
+  transition: all 0.4s ease-in;
+  border: 1px solid #344150;
+
+  /* box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.1),
+    0 4px 16px 0 rgba(0, 0, 0, 0.15); */
+  /* box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.15); */
+  background-color: #1e242f;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), transparent);
+
+  box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.2);
 }
 
 .card-price {
-  font-size: 28px;
+  font-size: 23px;
   font-weight: 400;
 }
 
