--- a/angular/online learning system/src/app/components/courses/course/course.component.html
+++ b/angular/online learning system/src/app/components/courses/course/course.component.html
@@ -17,17 +17,17 @@
       </div>
       <p class="card-price" *ngIf="price">₹ {{ course.price }}</p>
 
-      <div class="purchase-options" *ngIf="isOnCoursePage()">
+      <!-- <div class="purchase-options" *ngIf="isOnCoursePage()">
         <button class="add-to-cart" (click)="addTocart(course)">
           Add to Cart
         </button>
         <button class="buy-now">Buy now</button>
-      </div>
+      </div> -->
 
-      <div class="approval-options" *ngIf="isOnAdminPage()">
+      <!-- <div class="approval-options" *ngIf="isOnAdminPage()">
         <button class="approve" (click)="approveCourse(course)">Approve</button>
         <button class="reject">Reject</button>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
