--- a/angular/online learning system/src/app/components/mentor/mentor.component.css
+++ b/angular/online learning system/src/app/components/mentor/mentor.component.css
@@ -2,7 +2,7 @@
   margin: 50px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  /* height: 100%; */
 }
 
 input[type="text"],
@@ -25,8 +25,10 @@ select {
   margin-left: -100px;
 }
 
-.add-course {
+.add-course,
+.mentor-earning {
   margin-left: 70px;
+  margin-bottom: 30px;
 }
 
 .course-form {
@@ -56,6 +58,48 @@ hr {
   font-weight: bold;
 }
 
-h2 {
-  margin: 20px 0;
+table {
+  background-color: #161d29;
+  margin-top: 50px;
+  text-align: center;
+  border: 1px solid #2c333f;
+  border-radius: 10px;
+  font-size: 25px;
+  height: 450px;
+  display: block;
+  overflow-y: scroll;
+}
+
+.profile-logo {
+  background-color: transparent;
+}
+
+th,
+td {
+  width: 1505px;
+  height: 75px;
+}
+tr {
+  border-bottom: 1px solid #2c333f;
+}
+
+.mentor-name {
+  background: none;
+  color: white;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 1px;
+}
+::-webkit-scrollbar-track {
+  border: 2px solid #2c333f;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #161d29;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #88ba1c;
 }
