--- a/angular/online learning system/src/app/components/admin/admin-courses/admin-courses.component.html
+++ b/angular/online learning system/src/app/components/admin/admin-courses/admin-courses.component.html
@@ -4,14 +4,34 @@
     <div class="pending-courses" *ngIf="courses.length > 0">
       <h2>Pending course request</h2>
       <hr />
-      <div class="courses-card">
-        <app-course
-          class="course-card"
-          *ngFor="let courseEl of courses; let i = index"
-          [course]="courseEl"
-          [index]="i"
-        ></app-course>
-      </div>
+      <table class="table">
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Options</th>
+        </tr>
+        <tr *ngFor="let course of courses">
+          <td>
+            <span class="profile-logo">
+              <img
+                src="../../../assets/login_signup/profile.svg"
+                alt="profile"
+                height="40px"
+              />
+            </span>
+            <span class="course-name"> {{ course.name }} </span>
+          </td>
+          <td>₹ {{ course.price }}</td>
+          <td>
+            <div class="approval-options">
+              <button class="approve" (click)="approveCourse(course)">
+                Approve
+              </button>
+              <button class="reject" (click)="rejectCourse(course)" >Reject</button>
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
   </section>
 
@@ -19,12 +39,30 @@
   <section class="courses-container">
     <h2>All courses</h2>
     <hr />
-    <div class="all-courses">
-      <app-course
-        *ngFor="let courseEl of allCourses; let i = index"
-        [course]="courseEl"
-        [index]="i"
-      ></app-course>
-    </div>
+    <table class="table">
+      <tr>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Options</th>
+      </tr>
+      <tr *ngFor="let course of allCourses">
+        <td>
+          <span class="profile-logo">
+            <img
+              src="../../../assets/login_signup/profile.svg"
+              alt="profile"
+              height="40px"
+            />
+          </span>
+          <span class="course-name"> {{ course.name }} </span>
+        </td>
+        <td>₹ {{ course.price }}</td>
+        <td>
+          <div class="approval-options">
+            <button class="disable">Disable</button>
+          </div>
+        </td>
+      </tr>
+    </table>
   </section>
 </div>
