--- a/angular/online learning system/src/app/components/courses/course/course.component.css
+++ b/angular/online learning system/src/app/components/courses/course/course.component.css
@@ -4,7 +4,7 @@
   color: white;
   padding: 15px;
   height: 300px;
-  width: 300px;
+  width: 250px;
   box-shadow: 0 4px 8px 0 #1b232e;
 }
 
@@ -84,3 +84,9 @@ h2 {
   flex-direction: row;
   gap: 15px;
 } */
+
+
+.card-title{
+  font-size: 30px;
+  margin: 0;
+}
