--- a/angular/online learning system/src/app/components/courses/course/course.component.html
+++ b/angular/online learning system/src/app/components/courses/course/course.component.html
@@ -7,7 +7,7 @@
       height="200px"
     />
     <div class="card-body">
-      <h2 class="card-title">{{ course.name }}</h2>
+      <p class="card-title">{{ course.name }}</p>
       <div class="stars">
         <i
           class="fa fa-star"
