--- a/angular/online learning system/src/app/components/courses/courses.component.css
+++ b/angular/online learning system/src/app/components/courses/courses.component.css
@@ -1,7 +1,12 @@
-.container {
+.app-courses {
   margin-top: 50px;
   display: flex;
   flex-direction: column;
+  align-items: start;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .course-section {
@@ -19,8 +24,8 @@
 }
 
 .filter {
-  width: 20%;
-  margin: 8% 30px;
+  width: 14%;
+  margin: 8% 10px;
 }
 
 input[type="text"],
@@ -72,6 +77,7 @@ select {
 .course-container {
   width: 100%;
   display: flex;
+  margin-left: 30px;
   align-items: start;
   justify-items: start;
 }
